parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID ASSIGN expression SEMICOLON
Rule 2     statement -> ID ASSIGN expression
Rule 3     statement -> ID ASSIGN ID
Rule 4     statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 5     statement -> FOR LPAREN ID IN ID RPAREN LBRACE statements RBRACE
Rule 6     statement -> FOR LPAREN ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE
Rule 7     statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 8     statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 9     statement -> REPEAT LBRACE statements RBRACE
Rule 10    expression -> NUMBER
Rule 11    expression -> ID
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> LPAREN expression RPAREN
Rule 17    expression -> expression GREATER expression
Rule 18    expression -> expression LESS expression
Rule 19    expression -> expression GREATEREQ expression
Rule 20    expression -> expression LESSEQ expression
Rule 21    expression -> expression NOTEQUALTO expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression EQ expression
Rule 25    statements -> statement statements
Rule 26    statements -> statement
Rule 27    statements -> ID LPAREN STRING RPAREN
Rule 28    statements -> ID LPAREN ID RPAREN
Rule 29    statements -> ID LPAREN expression RPAREN
Rule 30    statements -> ID ASSIGN expression
Rule 31    statements -> expression
Rule 32    statements -> ID

Terminals, with rules where they appear

AND                  : 22
ASSIGN               : 1 2 3 30
COLON                : 6
DIVIDE               : 15
ELSE                 : 8
EQ                   : 24
FOR                  : 5 6
GREATER              : 17
GREATEREQ            : 19
ID                   : 1 2 3 3 5 5 6 11 27 28 28 29 30 32
IF                   : 7 8
IN                   : 5 6
LBRACE               : 4 5 6 7 8 8 9
LESS                 : 18
LESSEQ               : 20
LPAREN               : 4 5 6 7 8 16 27 28 29
MINUS                : 13
NOTEQUALTO           : 21
NUMBER               : 6 6 10
OR                   : 23
PLUS                 : 12
RBRACE               : 4 5 6 7 8 8 9
REPEAT               : 9
RPAREN               : 4 5 6 7 8 16 27 28 29
SEMICOLON            : 1
STRING               : 27
TIMES                : 14
WHILE                : 4
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 4 7 8 12 12 13 13 14 14 15 15 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 29 30 31
statement            : 25 26 0
statements           : 4 5 6 7 8 8 9 25

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID ASSIGN expression SEMICOLON
    (2) statement -> . ID ASSIGN expression
    (3) statement -> . ID ASSIGN ID
    (4) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (5) statement -> . FOR LPAREN ID IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> . FOR LPAREN ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (9) statement -> . REPEAT LBRACE statements RBRACE

    ID              shift and go to state 2
    WHILE           shift and go to state 3
    FOR             shift and go to state 4
    IF              shift and go to state 5
    REPEAT          shift and go to state 6

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . ASSIGN expression SEMICOLON
    (2) statement -> ID . ASSIGN expression
    (3) statement -> ID . ASSIGN ID

    ASSIGN          shift and go to state 7


state 3

    (4) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 8


state 4

    (5) statement -> FOR . LPAREN ID IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> FOR . LPAREN ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 9


state 5

    (7) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (8) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 10


state 6

    (9) statement -> REPEAT . LBRACE statements RBRACE

    LBRACE          shift and go to state 11


state 7

    (1) statement -> ID ASSIGN . expression SEMICOLON
    (2) statement -> ID ASSIGN . expression
    (3) statement -> ID ASSIGN . ID
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    LPAREN          shift and go to state 15

    expression                     shift and go to state 13

state 8

    (4) statement -> WHILE LPAREN . expression RPAREN LBRACE statements RBRACE
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 16

state 9

    (5) statement -> FOR LPAREN . ID IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> FOR LPAREN . ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE

    ID              shift and go to state 18


state 10

    (7) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE
    (8) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 19

state 11

    (9) statement -> REPEAT LBRACE . statements RBRACE
    (25) statements -> . statement statements
    (26) statements -> . statement
    (27) statements -> . ID LPAREN STRING RPAREN
    (28) statements -> . ID LPAREN ID RPAREN
    (29) statements -> . ID LPAREN expression RPAREN
    (30) statements -> . ID ASSIGN expression
    (31) statements -> . expression
    (32) statements -> . ID
    (1) statement -> . ID ASSIGN expression SEMICOLON
    (2) statement -> . ID ASSIGN expression
    (3) statement -> . ID ASSIGN ID
    (4) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (5) statement -> . FOR LPAREN ID IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> . FOR LPAREN ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (9) statement -> . REPEAT LBRACE statements RBRACE
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    ID              shift and go to state 22
    WHILE           shift and go to state 3
    FOR             shift and go to state 4
    IF              shift and go to state 5
    REPEAT          shift and go to state 6
    NUMBER          shift and go to state 14
    LPAREN          shift and go to state 15

    statements                     shift and go to state 20
    statement                      shift and go to state 21
    expression                     shift and go to state 23

state 12

    (3) statement -> ID ASSIGN ID .
    (11) expression -> ID .

  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for RBRACE resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for ID resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for IF resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for REPEAT resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for NUMBER resolved using rule 3 (statement -> ID ASSIGN ID .)
  ! reduce/reduce conflict for LPAREN resolved using rule 3 (statement -> ID ASSIGN ID .)
    $end            reduce using rule 3 (statement -> ID ASSIGN ID .)
    ID              reduce using rule 3 (statement -> ID ASSIGN ID .)
    WHILE           reduce using rule 3 (statement -> ID ASSIGN ID .)
    FOR             reduce using rule 3 (statement -> ID ASSIGN ID .)
    IF              reduce using rule 3 (statement -> ID ASSIGN ID .)
    REPEAT          reduce using rule 3 (statement -> ID ASSIGN ID .)
    NUMBER          reduce using rule 3 (statement -> ID ASSIGN ID .)
    LPAREN          reduce using rule 3 (statement -> ID ASSIGN ID .)
    RBRACE          reduce using rule 3 (statement -> ID ASSIGN ID .)
    SEMICOLON       reduce using rule 11 (expression -> ID .)
    PLUS            reduce using rule 11 (expression -> ID .)
    MINUS           reduce using rule 11 (expression -> ID .)
    TIMES           reduce using rule 11 (expression -> ID .)
    DIVIDE          reduce using rule 11 (expression -> ID .)
    GREATER         reduce using rule 11 (expression -> ID .)
    LESS            reduce using rule 11 (expression -> ID .)
    GREATEREQ       reduce using rule 11 (expression -> ID .)
    LESSEQ          reduce using rule 11 (expression -> ID .)
    NOTEQUALTO      reduce using rule 11 (expression -> ID .)
    AND             reduce using rule 11 (expression -> ID .)
    OR              reduce using rule 11 (expression -> ID .)
    EQ              reduce using rule 11 (expression -> ID .)

  ! $end            [ reduce using rule 11 (expression -> ID .) ]
  ! RBRACE          [ reduce using rule 11 (expression -> ID .) ]
  ! ID              [ reduce using rule 11 (expression -> ID .) ]
  ! WHILE           [ reduce using rule 11 (expression -> ID .) ]
  ! FOR             [ reduce using rule 11 (expression -> ID .) ]
  ! IF              [ reduce using rule 11 (expression -> ID .) ]
  ! REPEAT          [ reduce using rule 11 (expression -> ID .) ]
  ! NUMBER          [ reduce using rule 11 (expression -> ID .) ]
  ! LPAREN          [ reduce using rule 11 (expression -> ID .) ]


state 13

    (1) statement -> ID ASSIGN expression . SEMICOLON
    (2) statement -> ID ASSIGN expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEREQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . NOTEQUALTO expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression

    SEMICOLON       shift and go to state 24
    $end            reduce using rule 2 (statement -> ID ASSIGN expression .)
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    GREATEREQ       shift and go to state 31
    LESSEQ          shift and go to state 32
    NOTEQUALTO      shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    EQ              shift and go to state 36


state 14

    (10) expression -> NUMBER .

    SEMICOLON       reduce using rule 10 (expression -> NUMBER .)
    PLUS            reduce using rule 10 (expression -> NUMBER .)
    MINUS           reduce using rule 10 (expression -> NUMBER .)
    TIMES           reduce using rule 10 (expression -> NUMBER .)
    DIVIDE          reduce using rule 10 (expression -> NUMBER .)
    GREATER         reduce using rule 10 (expression -> NUMBER .)
    LESS            reduce using rule 10 (expression -> NUMBER .)
    GREATEREQ       reduce using rule 10 (expression -> NUMBER .)
    LESSEQ          reduce using rule 10 (expression -> NUMBER .)
    NOTEQUALTO      reduce using rule 10 (expression -> NUMBER .)
    AND             reduce using rule 10 (expression -> NUMBER .)
    OR              reduce using rule 10 (expression -> NUMBER .)
    EQ              reduce using rule 10 (expression -> NUMBER .)
    $end            reduce using rule 10 (expression -> NUMBER .)
    RPAREN          reduce using rule 10 (expression -> NUMBER .)
    RBRACE          reduce using rule 10 (expression -> NUMBER .)
    ID              reduce using rule 10 (expression -> NUMBER .)
    WHILE           reduce using rule 10 (expression -> NUMBER .)
    FOR             reduce using rule 10 (expression -> NUMBER .)
    IF              reduce using rule 10 (expression -> NUMBER .)
    REPEAT          reduce using rule 10 (expression -> NUMBER .)
    NUMBER          reduce using rule 10 (expression -> NUMBER .)
    LPAREN          reduce using rule 10 (expression -> NUMBER .)


state 15

    (16) expression -> LPAREN . expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 37

state 16

    (4) statement -> WHILE LPAREN expression . RPAREN LBRACE statements RBRACE
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEREQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . NOTEQUALTO expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    GREATEREQ       shift and go to state 31
    LESSEQ          shift and go to state 32
    NOTEQUALTO      shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    EQ              shift and go to state 36


state 17

    (11) expression -> ID .

    RPAREN          reduce using rule 11 (expression -> ID .)
    PLUS            reduce using rule 11 (expression -> ID .)
    MINUS           reduce using rule 11 (expression -> ID .)
    TIMES           reduce using rule 11 (expression -> ID .)
    DIVIDE          reduce using rule 11 (expression -> ID .)
    GREATER         reduce using rule 11 (expression -> ID .)
    LESS            reduce using rule 11 (expression -> ID .)
    GREATEREQ       reduce using rule 11 (expression -> ID .)
    LESSEQ          reduce using rule 11 (expression -> ID .)
    NOTEQUALTO      reduce using rule 11 (expression -> ID .)
    AND             reduce using rule 11 (expression -> ID .)
    OR              reduce using rule 11 (expression -> ID .)
    EQ              reduce using rule 11 (expression -> ID .)
    SEMICOLON       reduce using rule 11 (expression -> ID .)
    $end            reduce using rule 11 (expression -> ID .)
    RBRACE          reduce using rule 11 (expression -> ID .)
    ID              reduce using rule 11 (expression -> ID .)
    WHILE           reduce using rule 11 (expression -> ID .)
    FOR             reduce using rule 11 (expression -> ID .)
    IF              reduce using rule 11 (expression -> ID .)
    REPEAT          reduce using rule 11 (expression -> ID .)
    NUMBER          reduce using rule 11 (expression -> ID .)
    LPAREN          reduce using rule 11 (expression -> ID .)


state 18

    (5) statement -> FOR LPAREN ID . IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> FOR LPAREN ID . IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE

    IN              shift and go to state 39


state 19

    (7) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE
    (8) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEREQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . NOTEQUALTO expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    GREATEREQ       shift and go to state 31
    LESSEQ          shift and go to state 32
    NOTEQUALTO      shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    EQ              shift and go to state 36


state 20

    (9) statement -> REPEAT LBRACE statements . RBRACE

    RBRACE          shift and go to state 41


state 21

    (25) statements -> statement . statements
    (26) statements -> statement .
    (25) statements -> . statement statements
    (26) statements -> . statement
    (27) statements -> . ID LPAREN STRING RPAREN
    (28) statements -> . ID LPAREN ID RPAREN
    (29) statements -> . ID LPAREN expression RPAREN
    (30) statements -> . ID ASSIGN expression
    (31) statements -> . expression
    (32) statements -> . ID
    (1) statement -> . ID ASSIGN expression SEMICOLON
    (2) statement -> . ID ASSIGN expression
    (3) statement -> . ID ASSIGN ID
    (4) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (5) statement -> . FOR LPAREN ID IN ID RPAREN LBRACE statements RBRACE
    (6) statement -> . FOR LPAREN ID IN NUMBER COLON NUMBER RPAREN LBRACE statements RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (9) statement -> . REPEAT LBRACE statements RBRACE
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    RBRACE          reduce using rule 26 (statements -> statement .)
    ID              shift and go to state 22
    WHILE           shift and go to state 3
    FOR             shift and go to state 4
    IF              shift and go to state 5
    REPEAT          shift and go to state 6
    NUMBER          shift and go to state 14
    LPAREN          shift and go to state 15

    statement                      shift and go to state 21
    statements                     shift and go to state 42
    expression                     shift and go to state 23

state 22

    (27) statements -> ID . LPAREN STRING RPAREN
    (28) statements -> ID . LPAREN ID RPAREN
    (29) statements -> ID . LPAREN expression RPAREN
    (30) statements -> ID . ASSIGN expression
    (32) statements -> ID .
    (1) statement -> ID . ASSIGN expression SEMICOLON
    (2) statement -> ID . ASSIGN expression
    (3) statement -> ID . ASSIGN ID
    (11) expression -> ID .

  ! reduce/reduce conflict for RBRACE resolved using rule 11 (expression -> ID .)
    LPAREN          shift and go to state 43
    ASSIGN          shift and go to state 44
    PLUS            reduce using rule 11 (expression -> ID .)
    MINUS           reduce using rule 11 (expression -> ID .)
    TIMES           reduce using rule 11 (expression -> ID .)
    DIVIDE          reduce using rule 11 (expression -> ID .)
    GREATER         reduce using rule 11 (expression -> ID .)
    LESS            reduce using rule 11 (expression -> ID .)
    GREATEREQ       reduce using rule 11 (expression -> ID .)
    LESSEQ          reduce using rule 11 (expression -> ID .)
    NOTEQUALTO      reduce using rule 11 (expression -> ID .)
    AND             reduce using rule 11 (expression -> ID .)
    OR              reduce using rule 11 (expression -> ID .)
    EQ              reduce using rule 11 (expression -> ID .)
    RBRACE          reduce using rule 11 (expression -> ID .)

  ! RBRACE          [ reduce using rule 32 (statements -> ID .) ]


state 23

    (31) statements -> expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEREQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . NOTEQUALTO expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression

    RBRACE          reduce using rule 31 (statements -> expression .)
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    GREATEREQ       shift and go to state 31
    LESSEQ          shift and go to state 32
    NOTEQUALTO      shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    EQ              shift and go to state 36


state 24

    (1) statement -> ID ASSIGN expression SEMICOLON .

    $end            reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    FOR             reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    REPEAT          reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    NUMBER          reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    LPAREN          reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)


state 25

    (12) expression -> expression PLUS . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 45

state 26

    (13) expression -> expression MINUS . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 46

state 27

    (14) expression -> expression TIMES . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 47

state 28

    (15) expression -> expression DIVIDE . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 48

state 29

    (17) expression -> expression GREATER . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 49

state 30

    (18) expression -> expression LESS . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression

    NUMBER          shift and go to state 14
    ID              shift and go to state 17
    LPAREN          shift and go to state 15

    expression                     shift and go to state 50

state 31

    (19) expression -> expression GREATEREQ . expression
    (10) expression -> . NUMBER
    (11) expression -> . ID
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEREQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression NOTEQUALTO expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
